<resources>

    <string name="app_name">Whack a Mole</string>
    <string name="high_score">High Score: </string>
    <string name="initial_score">0</string>
    <string name="initial_timer">30s</string>
    <string name="play">Play</string>
    <string name="timer">Timer: </string>
    <string name="moles">Moles: </string>
    <string name="play_again">Play again</string>
    <string name="menu">Menu</string>
    <string name="timer_over">0s</string>
    <string name="rules_briefing">Tap as many moles as you can and get scores.</string>

</resources>
