<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="8dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:fontFamily="monospace"
        android:text="@string/initial_score"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/score"
        android:layout_toStartOf="@id/score"
        android:layout_above="@id/play"
        android:fontFamily="monospace"
        android:text="@string/high_score"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:padding="8dp"
        android:fontFamily="monospace"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:onClick="onClickPlayButton" />

</RelativeLayout>
